Fixed spacing issue

--- a/css/custom.css
+++ b/css/custom.css
@@ -58,6 +58,8 @@ body {
 	/*float:left;*/
 	margin-left:12px;
 	border: 1px solid black;
+	margin-bottom: 10px;
+	padding-left: 4px;
 }
 
 .notSlot {
